java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint7-hints.pass
LBL_FIX_Impl_Abstract_Methods
LBL_FIX_Make_Class_Abstract
